--- a/server/package.json
+++ b/server/package.json
@@ -85,6 +85,7 @@
     "sift": "^17.1.3",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.2",
+    "stripe": "^20.0.0",
     "toidentifier": "^1.0.1",
     "tr46": "^5.1.1",
     "type-is": "^2.0.1",
